log
Mon 25 Mar 2024 08:48:03 PM UTC: 
 list.c | 7 ++++++-
 1 file changed, 6 insertions(+), 1 deletion(-)
In file included from test.c:5:
list.c: In function ‘createList’:
list.c:33:8: error: array subscript ‘List {aka struct List}[0]’ is partly outside array bounds of ‘unsigned char[8]’ [-Werror=array-bounds]
   33 |   lista->head = NULL;
      |        ^~
list.c:32:25: note: referencing an object of size 8 allocated by ‘malloc’
   32 |   List *lista = (List *)malloc(sizeof(lista));
      |                         ^~~~~~~~~~~~~~~~~~~~~
list.c:34:8: error: array subscript ‘List {aka struct List}[0]’ is partly outside array bounds of ‘unsigned char[8]’ [-Werror=array-bounds]
   34 |   lista->tail = NULL;
      |        ^~
list.c:32:25: note: referencing an object of size 8 allocated by ‘malloc’
   32 |   List *lista = (List *)malloc(sizeof(lista));
      |                         ^~~~~~~~~~~~~~~~~~~~~
list.c:35:8: error: array subscript ‘List {aka struct List}[0]’ is partly outside array bounds of ‘unsigned char[8]’ [-Werror=array-bounds]
   35 |   lista->current = NULL;
      |        ^~
list.c:32:25: note: referencing an object of size 8 allocated by ‘malloc’
   32 |   List *lista = (List *)malloc(sizeof(lista));
      |                         ^~~~~~~~~~~~~~~~~~~~~
cc1: all warnings being treated as errors
Compilation failed
380d25d
Mon 25 Mar 2024 08:49:33 PM UTC: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  1|5
total_score: 10/70
12624a7
Mon 25 Mar 2024 08:52:09 PM UTC: 
 list.c | 6 +++++-
 1 file changed, 5 insertions(+), 1 deletion(-)
 tests:  1|5
total_score: 10/70
9a2fc3e
Mon 25 Mar 2024 08:53:21 PM UTC: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  2|5
total_score: 15/70
30cca54
Mon 25 Mar 2024 08:54:05 PM UTC: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  2|5
total_score: 15/70
f3b82cc
Mon 25 Mar 2024 08:58:16 PM UTC: 
 list.c | 5 ++++-
 1 file changed, 4 insertions(+), 1 deletion(-)
 tests:  0|0
92b1fd1
Mon 25 Mar 2024 09:05:59 PM UTC: 
 list.c | 2 ++
 1 file changed, 2 insertions(+)
 tests:  0|0
952aa01
Mon 25 Mar 2024 09:06:19 PM UTC: 
 tests:  0|0
91c77db
Mon 25 Mar 2024 09:09:49 PM UTC: 
 list.c | 16 +++++++++-------
 1 file changed, 9 insertions(+), 7 deletions(-)
 tests:  2|5
total_score: 15/70
436a812
Mon 25 Mar 2024 09:10:13 PM UTC: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|0
8f3beeb
Mon 25 Mar 2024 09:11:45 PM UTC: 
 list.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
 tests:  5|4
total_score: 25/70
5aa4568
Mon 25 Mar 2024 09:15:11 PM UTC: 
 list.c | 9 +++++++--
 1 file changed, 7 insertions(+), 2 deletions(-)
 tests:  5|4
total_score: 25/70
73bc8b4
Mon 25 Mar 2024 09:16:34 PM UTC: 
 list.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
 tests:  6|4
total_score: 25/70
3d0fb35
Mon 25 Mar 2024 09:17:17 PM UTC: 
 list.c | 1 +
 1 file changed, 1 insertion(+)
 tests:  6|4
total_score: 25/70
1835336
Mon 25 Mar 2024 09:19:28 PM UTC: 
 list.c | 9 +++++++--
 1 file changed, 7 insertions(+), 2 deletions(-)
 tests:  0|0
b94c6a4
Mon 25 Mar 2024 09:21:59 PM UTC: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  9|3
total_score: 35/70
25b9efe
Mon 25 Mar 2024 09:29:12 PM UTC: 
 list.c | 6 +++++-
 1 file changed, 5 insertions(+), 1 deletion(-)
 tests:  9|3
total_score: 35/70
23bee33
Mon 25 Mar 2024 09:30:11 PM UTC: 
 list.c | 2 ++
 1 file changed, 2 insertions(+)
 tests:  0|0
02af8b4
Mon 25 Mar 2024 09:31:20 PM UTC: 
 list.c | 6 ++++++
 1 file changed, 6 insertions(+)
 tests:  9|3
total_score: 35/70
aa9a4ab
Mon 25 Mar 2024 09:31:49 PM UTC: 
 list.c | 3 +++
 1 file changed, 3 insertions(+)
 tests:  10|2
total_score: 45/70
a609c94
Mon 25 Mar 2024 09:39:19 PM UTC: 
 list.c | 19 +++++++++++++++++--
 1 file changed, 17 insertions(+), 2 deletions(-)
 tests:  10|2
total_score: 45/70
85bd0e5
Mon 25 Mar 2024 09:50:41 PM UTC: 
 list.c | 2 ++
 1 file changed, 2 insertions(+)
 tests:  11|1
total_score: 55/70
b09f28c
Mon 25 Mar 2024 10:13:03 PM UTC: 
 list.c | 14 ++++++++++++--
 1 file changed, 12 insertions(+), 2 deletions(-)
 tests:  11|1
total_score: 55/70
ecc858e
Mon 25 Mar 2024 10:15:39 PM UTC: 
 list.c | 6 ++++++
 1 file changed, 6 insertions(+)
 tests:  11|1
total_score: 55/70
d626ea9
Mon 25 Mar 2024 10:17:55 PM UTC: 
 list.c | 10 ++++------
 1 file changed, 4 insertions(+), 6 deletions(-)
 tests:  11|1
total_score: 55/70
2dcb44d
Mon 25 Mar 2024 10:31:04 PM UTC: 
 list.c | 14 ++++++++------
 1 file changed, 8 insertions(+), 6 deletions(-)
 tests:  11|1
total_score: 55/70
ad0ff8d
Mon 25 Mar 2024 10:31:53 PM UTC: 
 list.c | 2 ++
 1 file changed, 2 insertions(+)
 tests:  11|1
total_score: 55/70
ef8b4d0
Mon 25 Mar 2024 10:34:11 PM UTC: 
 list.c | 7 +++++++
 1 file changed, 7 insertions(+)
 tests:  12|0
total_score: 70/70
de5d24d
Tue 26 Mar 2024 03:44:15 PM UTC: 
 list.c | 6 ++++--
 1 file changed, 4 insertions(+), 2 deletions(-)
 tests:  12|0
total_score: 70/70
28b6e48
Tue 26 Mar 2024 11:37:41 PM UTC: 
 list.c | 5 ++++-
 1 file changed, 4 insertions(+), 1 deletion(-)
 tests:  12|0
total_score: 70/70
bc10e8d
Tue 26 Mar 2024 11:40:42 PM UTC: 
 list.c | 18 +++---------------
 1 file changed, 3 insertions(+), 15 deletions(-)
 tests:  12|0
total_score: 70/70
bccae5c
Wed 27 Mar 2024 02:12:41 PM UTC: 
 list.c | 5 +----
 1 file changed, 1 insertion(+), 4 deletions(-)
 tests:  8|1
total_score: 60/70
cfb1736
Wed 27 Mar 2024 02:12:53 PM UTC: 
 list.c | 5 ++++-
 1 file changed, 4 insertions(+), 1 deletion(-)
 tests:  12|0
total_score: 70/70
ed23b99
Wed 27 Mar 2024 02:33:24 PM UTC: 
 list.c | 8 --------
 1 file changed, 8 deletions(-)
 tests:  12|0
total_score: 70/70
db04434
Wed 27 Mar 2024 03:03:08 PM UTC: 
 list.c | 16 ++++++++++++----
 1 file changed, 12 insertions(+), 4 deletions(-)
 tests:  12|0
total_score: 70/70
4d9eaa3
Wed 27 Mar 2024 03:05:25 PM UTC: 
 list.c | 17 +++++++----------
 1 file changed, 7 insertions(+), 10 deletions(-)
 tests:  0|0
9d68869
Wed 27 Mar 2024 03:06:00 PM UTC: 
 list.c | 17 ++++++++++-------
 1 file changed, 10 insertions(+), 7 deletions(-)
 tests:  12|0
total_score: 70/70
ab827bf
Wed 27 Mar 2024 03:14:20 PM UTC: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  12|0
total_score: 70/70
a227052
Wed 27 Mar 2024 06:00:41 PM UTC: 
 list.c | 20 +++++---------------
 1 file changed, 5 insertions(+), 15 deletions(-)
 tests:  0|0
c402e3d
